Testing the app
- Only the region growing and mean shift are working
- The task documentation hasn't been added yet in README-Assets

--- a/implementation_jupyter_notebooks/thresholding/Thresholding.ipynb
+++ b/implementation_jupyter_notebooks/thresholding/Thresholding.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,6 @@
     "from sklearn.mixture import GaussianMixture\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.stats import norm\n",
-    "from scipy import stats\n",
     "import pandas as pd\n",
     "from sklearn.mixture import GaussianMixture as GMM\n",
     "import matplotlib as mpl\n",
@@ -112,7 +111,7 @@
    ],
    "source": [
     "# Load a grayscale image for testing\n",
-    "image_path = '../Images/Elizabeth_Tower_London.jpg'  # Replace with your image path\n",
+    "image_path = '../test_images/elizabeth_tower_london.jpg'  # Replace with your image path\n",
     "grayscale_image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "# Display the original image\n",
@@ -457,7 +456,7 @@
    ],
    "source": [
     "# Load the image\n",
-    "image = cv2.imread('../Images/Elizabeth_Tower_London.jpg', 0)  # Ensure this path is correct\n",
+    "image = cv2.imread('../test_images/elizabeth_tower_london.jpg', 0)  # Ensure this path is correct\n",
     "\n",
     "# Calculate the histogram\n",
     "histogram, bins = np.histogram(image.flatten(), bins=265, range=[0, 255])\n",
@@ -725,7 +724,7 @@
     "    return (1 / (sigma * np.sqrt(2 * np.pi))) * np.exp(-(x - mu)**2 / (2 * sigma**2))\n",
     "\n",
     "# Load the image in grayscale mode\n",
-    "image = cv2.imread('../Images/Elizabeth_Tower_London.jpg', 0)\n",
+    "image = cv2.imread('../test_images/elizabeth_tower_london.jpg', 0)\n",
     "\n",
     "# Calculate the histogram\n",
     "histogram, bins = np.histogram(image.flatten(), bins=256, range=[0, 255])\n",
@@ -782,7 +781,7 @@
    ],
    "source": [
     "# Load the image in grayscale mode\n",
-    "image = cv2.imread('../Images/Elizabeth_Tower_London.jpg', 0)\n",
+    "image = cv2.imread('../test_images/elizabeth_tower_london.jpg', 0)\n",
     "\n",
     "# Calculate the histogram\n",
     "histogram, bins = np.histogram(image.flatten(), bins=256, range=[0,256])\n",
@@ -958,7 +957,7 @@
     "mpl.rcParams.update({'font.size': 15, 'font.family': 'STIXGeneral', 'mathtext.fontset': 'stix'})\n",
     "\n",
     "# Load image\n",
-    "image = cv2.imread('../Images/Elizabeth_Tower_London.jpg', 0)\n",
+    "image = cv2.imread('', 0)\n",
     "\n",
     "# Compute histogram\n",
     "histogram, bins = np.histogram(image.flatten(), bins=210, range=[0, 210])\n",
@@ -1028,7 +1027,7 @@
     "\n",
     "\n",
     "# create the data \n",
-    "image= cv2.imread('../Images/Elizabeth_Tower_London.jpg',0)\n",
+    "image= cv2.imread('../test_images/elizabeth_tower_london.jpg',0)\n",
     "x, bins = np.histogram(image.flatten(), bins=256, range=[0,256])\n",
     "x = x.reshape(-1, 1)[:210] #/ (image.shape[0] * image.shape[1])  # Normalize histogram\n",
     "\n",
@@ -1267,7 +1266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
